--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="src/player.js"></script>
+    <script src="src/game.js"></script>
+    <script src="src/main.js"></script>
 </body>
 </html>
