Add 3 main sections to HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Document</title>
 </head>
 <body>
+    <section class="left">🌻
+
+    </section>
+
+    <section class="center"> 🌎
+
+    </section>
+
+    <section class="rigth"> 🌺
+
+    </section>
     <script src="src/player.js"></script>
     <script src="src/game.js"></script>
     <script src="src/main.js"></script>
