--- a/index.html
+++ b/index.html
@@ -14,6 +14,215 @@
         <h3 class="p1-win-count"> 0 wins</h3>
 
         <article class="p1-games">
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
+
         </article>
 
     </section>
@@ -43,16 +252,18 @@
         </article>
     </section>
     <template>
-        <article class="mini-game-board">
-            <div class="one min-cell">🌚</div>
-            <div class="two min-cell">🌝</div>
-            <div class="three min-cell">🌚</div>
-            <div class="four min-cell">🌝</div>
-            <div class="five min-cell">🌚</div>
-            <div class="six min-cell">🌝</div>
-            <div class="seven min-cell">🌚</div>
-            <div class="eigth min-cell">🌝</div>
-            <div class="nine min-cell">🌝</div>
+        <article class="player-container">
+            <div class="min-game-board">
+                <div class="one cell">🌚</div>
+                <div class="two cell">🌝</div>
+                <div class="three cell">🌚</div>
+                <div class="four cell">🌝</div>
+                <div class="five cell">🌚</div>
+                <div class="six cell">🌝</div>
+                <div class="seven cell">🌚</div>
+                <div class="eigth cell">🌝</div>
+                <div class="nine cell">🌝</div>
+            </div>
         </article>
     </template>
     <script src="src/player.js"></script>
