--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body class="main-container">
     <section class="left-section">
-        <h2 class="player1-name">🌚</h2>
+        <h1 class="player1-name">Player 1</h1>
+        <h2 class="player1-token">🌚</h2>
         <h3 class="p1-win-count"> 0 wins</h3>
 
         <article class="p1-games">
@@ -27,207 +28,13 @@
                     <div class="nine min-cell">🌝</div>
                 </div>
             </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-            <article class="player-container">
-                <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
-                </div>
-            </article>
-
+            
         </article>
 
     </section>
 
     <section class="center-section"> 
+        <h1 class="game-name">Tic <br>Tac<br> Toe</h1>
         <h1 class="main-header">It's 👾's turn</h1>
             <article class="container">
                 <div class="game-board">
@@ -245,9 +52,23 @@
     </section>
 
     <section class="rigth-section"> 
-        <h2 class="player2-name">🌝</h2>
+        <h1 class="player2-name">Player 2</h1>
+        <h2 class="player2-toke">🌝</h2>
         <h3 class="p1-win-count">0 wins</h3>
-        <article class="p2-games">2
+        <article class="p2-games">
+            <article class="player-container">
+                <div class="mini-game-board">
+                    <div class="one min-cell">🌚</div>
+                    <div class="two min-cell">🌝</div>
+                    <div class="three min-cell">🌚</div>
+                    <div class="four min-cell">🌝</div>
+                    <div class="five min-cell">🌚</div>
+                    <div class="six min-cell">🌝</div>
+                    <div class="seven min-cell">🌚</div>
+                    <div class="eigth min-cell">🌝</div>
+                    <div class="nine min-cell">🌝</div>
+                </div>
+            </article>
 
         </article>
     </section>
