--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <article class="p1-games">
             <article class="player-container">
                 <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
+                    <div class="one min-cell"></div>
+                    <div class="two min-cell">🐔</div>
+                    <div class="three min-cell">👾</div>
+                    <div class="four min-cell">🐔</div>
+                    <div class="five min-cell">👾</div>
+                    <div class="six min-cell">👾</div>
+                    <div class="seven min-cell">👾</div>
+                    <div class="eigth min-cell">🐔</div>
+                    <div class="nine min-cell">🐔</div>
                 </div>
             </article>
             
@@ -38,15 +38,15 @@
         <h1 class="main-header">It's 👾's turn</h1>
             <article class="container">
                 <div class="game-board">
-                    <div class="one cell">🌚</div>
-                    <div class="two cell">🌝</div>
-                    <div class="three cell">🌚</div>
-                    <div class="four cell">🌝</div>
-                    <div class="five cell">🌚</div>
-                    <div class="six cell">🌝</div>
-                    <div class="seven cell">🌚</div>
-                    <div class="eigth cell">🌝</div>
-                    <div class="nine cell">🌝</div>
+                    <div class="one cell" id="0"></div>
+                    <div class="two cell" id="1"></div>
+                    <div class="three cell" id="2"></div>
+                    <div class="four cell" id="3"></div>
+                    <div class="five cell" id="4"></div>
+                    <div class="six cell" id="5"></div>
+                    <div class="seven cell" id="6"></div>
+                    <div class="eigth cell" id="7"></div>
+                    <div class="nine cell" id="8"></div>
                 </div>
             </article>
     </section>
@@ -58,15 +58,15 @@
         <article class="p2-games">
             <article class="player-container">
                 <div class="mini-game-board">
-                    <div class="one min-cell">🌚</div>
-                    <div class="two min-cell">🌝</div>
-                    <div class="three min-cell">🌚</div>
-                    <div class="four min-cell">🌝</div>
-                    <div class="five min-cell">🌚</div>
-                    <div class="six min-cell">🌝</div>
-                    <div class="seven min-cell">🌚</div>
-                    <div class="eigth min-cell">🌝</div>
-                    <div class="nine min-cell">🌝</div>
+                    <div class="one min-cell"></div>
+                    <div class="two min-cell">🐔</div>
+                    <div class="three min-cell"></div>
+                    <div class="four min-cell">👾</div>
+                    <div class="five min-cell">🐔</div>
+                    <div class="six min-cell"></div>
+                    <div class="seven min-cell"></div>
+                    <div class="eigth min-cell">🐔</div>
+                    <div class="nine min-cell">👾</div>
                 </div>
             </article>
 
