--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="main-container">
     <section class="left-section">
         <h1 class="player1-name">Player 1</h1>
-        <h2 class="player1-token">🌚</h2>
+        <h2 class="player1-token">🐔</h2>
         <h3 class="p1-win-count"> 0 wins</h3>
 
         <article class="p1-games">
@@ -35,7 +35,7 @@
 
     <section class="center-section"> 
         <h1 class="game-name">Tic <br>Tac<br> Toe</h1>
-        <h1 class="main-header">It's 👾's turn</h1>
+        <h1 class="main-header">It's 🐔's turn</h1>
             <article class="container">
                 <div class="game-board">
                     <div class="one cell" id="0"></div>
@@ -53,8 +53,8 @@
 
     <section class="rigth-section"> 
         <h1 class="player2-name">Player 2</h1>
-        <h2 class="player2-toke">🌝</h2>
-        <h3 class="p1-win-count">0 wins</h3>
+        <h2 class="player2-toke">👾</h2>
+        <h3 class="p2-win-count">0 wins</h3>
         <article class="p2-games">
             <article class="player-container">
                 <div class="mini-game-board">
