Comment out player's mini game boards

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h3 class="p1-win-count"> 0 wins</h3>
 
         <article class="p1-games">
-            <article class="player-container">
+            <!-- <article class="player-container">
                 <div class="mini-game-board">
                     <div class="one min-cell"></div>
                     <div class="two min-cell">🐔</div>
@@ -27,7 +27,7 @@
                     <div class="eigth min-cell">🐔</div>
                     <div class="nine min-cell">🐔</div>
                 </div>
-            </article>
+            </article> -->
             
         </article>
 
@@ -74,7 +74,7 @@
     </section>
     <template>
         <article class="player-container">
-            <div class="min-game-board">
+            <!-- <div class="min-game-board">
                 <div class="one cell">🌚</div>
                 <div class="two cell">🌝</div>
                 <div class="three cell">🌚</div>
@@ -84,7 +84,7 @@
                 <div class="seven cell">🌚</div>
                 <div class="eigth cell">🌝</div>
                 <div class="nine cell">🌝</div>
-            </div>
+            </div> -->
         </article>
     </template>
     <script src="src/player.js"></script>
