--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
 
     <section class="center-section"> 
-        <h1 class="game-name">Tic <br>Tac<br> Toe</h1>
+        <h1 class="game-name">Tic Tac Toe</h1>
         <h1 class="main-header">It's 🐔's turn</h1>
             <article class="container">
                 <div class="game-board">
@@ -53,7 +53,7 @@
 
     <section class="rigth-section"> 
         <h1 class="player2-name">Player 2</h1>
-        <h2 class="player2-toke">👾</h2>
+        <h2 class="player2-token">👾</h2>
         <h3 class="p2-win-count">0 wins</h3>
         <article class="p2-games">
             <article class="player-container">
